Updated README.md and Q&A.md